# Console_Game

./: CMakeLists.txt  DataFormatting.cpp  DataFormatting.h  Doxyfile  Doxygen html documentation.rar  ErrorLog.cpp  ErrorLog.h  Game.cpp  Game.h  GlobalVariables.h  Printy Village Dungeon.txt  Printy hry.txt  README.md  main.cpp  resource.h
00_Players_Classes/: Controls.h  Inventory.cpp  Inventory.h  Player.cpp  Player.h  PlayerController.cpp  PlayerController.h
01_Enums/: ActionType.h  Colors.h  MenuScreen.h  TileType.h
02_Entity/: Armor.cpp  Armor.h  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  IEntity.h  Item.cpp  Item.h  NPC.cpp  NPC.h  Potion.cpp  Potion.h  Weapon.cpp  Weapon.h
03_Map/: EntityManager.cpp  EntityManager.h  Map.cpp  Map.h  Room.cpp  Room.h  Tile.cpp  Tile.h
04_Structs/: PositionStruct.h
05_FrontEndClasses/: ConsoleManager.cpp  ConsoleManager.h  DisplayScreens.h  GUI.cpp  GUI.h  View.cpp  View.h
099_Files_TXT/: test.txt
099_Files_TXT/Mapa/Locations/: LocationsNames.txt  Starting.txt
099_Files_TXT/Mapa/Locations/00_Village/just the real one/: 01.txt  0test.txt
099_Files_TXT/Mapa/Locations/01_Forest/: 01.txt  02.txt  03.txt
099_Files_TXT/Mapa/Locations/03_Fields/: 01.txt
Doxygen html documentation/: _action_type_8h.html  _action_type_8h.js  _action_type_8h_source.html  _armor_8cpp.html  _armor_8h.html  _armor_8h.js  _armor_8h_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _colors_8h.html  _colors_8h.js  _colors_8h_source.html  _console_manager_8cpp.html  _console_manager_8h.html  _console_manager_8h.js  _console_manager_8h_source.html  _data_formatting_8cpp.html  _data_formatting_8cpp.js  _data_formatting_8h.html  _data_formatting_8h.js  _data_formatting_8h_source.html  _enemy_8cpp.html  _enemy_8h.html  _enemy_8h_source.html  _entity_8cpp.html  _entity_8h.html  _entity_8h_source.html  _entity_manager_8cpp.html  _entity_manager_8h.html  _entity_manager_8h.js  _entity_manager_8h_source.html  _error_log_8cpp.html  _error_log_8cpp.js  _error_log_8h.html  _error_log_8h.js  _error_log_8h_source.html  _game_8cpp.html  _game_8h.html  _game_8h_source.html  _i_entity_8h.html  (+153 more)
Doxygen html documentation/search/: all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  classes_6.js  enums_0.js  enums_1.js  enums_2.js  enums_3.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  enumvalues_b.js  enumvalues_c.js  files_0.js  (+33 more)
FrontEndClasses/: DisplayScreens.cpp  DisplayScreens.h  GUI.cpp  GUI.h
Players_Classes/: Controls.cpp  Controls.h  Player.cpp  Player.h
